--- a/src/app/pages/privacy-policy/privacy-policy.component.html
+++ b/src/app/pages/privacy-policy/privacy-policy.component.html
@@ -30,6 +30,11 @@
       </div>
 
       <div class="section">
+        <h2>Google Analytics</h2>
+        <p>We use Google Analytics to understand how our visitors use the site and to improve the user experience. Google Analytics collects information such as how often users visit this site, what pages they visit when they do so, and what other sites they used prior to coming to this site. We do not combine the information collected through the use of Google Analytics with personally identifiable information.</p>
+      </div>
+
+      <div class="section">
         <h2>Information Protection</h2>
         <p>We implement appropriate security measures to protect your personal information against unauthorized access, alteration, disclosure, or destruction.</p>
       </div>
@@ -41,7 +46,7 @@
           Sikkim Khadi and Village Industries Board<br>
           Khadi Bhawan Deorali, Gangtok Sikkim - 737102<br>
           Email: sikkimkhadi&#64;gmail.com<br>
-          Phone: 6296542761
+          Phone: 8918128518
         </address>
       </div>
     </section>
