--- a/src/app/pages/not-found/not-found.component.html
+++ b/src/app/pages/not-found/not-found.component.html
@@ -10,7 +10,7 @@
         <i class="material-icons">home</i>
         <span>Home</span>
       </a>
-      <a routerLink="/latest" class="nav-link">
+      <a routerLink="/events/latest" class="nav-link">
         <i class="material-icons">event</i>
         <span>Latest Events</span>
       </a>
